fix(admin): Removed extra whitespace

--- a/resources/css/filament/control/theme.css
+++ b/resources/css/filament/control/theme.css
@@ -3,6 +3,9 @@
 @source '../../../../app/Filament/**/*';
 @source '../../../../resources/views/filament/**/*';
 
+.fi {
+    scrollbar-gutter: unset;
+}
 
 .fi-body {
     @apply bg-gray-50 dark:bg-gray-950;
@@ -30,7 +33,7 @@
 
 .fi-main-ctn {
     @apply pt-3 pb-3 pl-3 pr-3 md:pt-4 md:pb-4 md:pl-4 md:pr-3;
-    scrollbar-gutter: stable;
+    /* scrollbar-gutter: stable; */
 }
 
 .fi-main {
